# easypark

./: .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile-with-debian.txt  Dockerfile.stage  README  execute.sh  run.sh
.cargo/: config.toml
.github/workflows/: rust.yml
migrations/: 20240507130658_users.down.sql  20240507130658_users.up.sql  20240520191119_init.down.sql  20240520191119_init.up.sql  20240521092306_alter_enum.down.sql  20240521092306_alter_enum.up.sql  20240521093722_drop_unique_index_at_owner_id_in_parking_lot_table.down.sql  20240521093722_drop_unique_index_at_owner_id_in_parking_lot_table.up.sql  20240521113208_alter_order_id_type.down.sql  20240521113208_alter_order_id_type.up.sql  20240528091859_add_keeper_in_parking_lot.down.sql  20240528091859_add_keeper_in_parking_lot.up.sql  20240528093826_add_keeper_on_user_2.down.sql  20240528093826_add_keeper_on_user_2.up.sql  20240528145214_add_checkin_checkout_date_in_parking_history.down.sql  20240528145214_add_checkin_checkout_date_in_parking_history.up.sql  20240530120239_adding_owner_of_keepeer_in_user.down.sql  20240530120239_adding_owner_of_keepeer_in_user.up.sql  20240530203750_add_default_to_vehicle_type.up.sql
src/: main.rs
src/app/: mod.rs  router.rs
src/app/auth/: router.rs
src/app/file_upload/: router.rs
src/app/parking_area/: mod.rs  router.rs
src/app/parking_history/: mod.rs  router.rs
src/app/payment/: mod.rs  router.rs
src/app/user/: mod.rs  router.rs
src/app/whatsapp/: router.rs
src/libs/: database.rs  jwt.rs  mod.rs  trace.rs
src/libs/error/: aggregate.rs
src/libs/extractor/: app_body.rs  app_json.rs  current_user.rs  mod.rs
src/libs/middleware/: base.rs
src/libs/types/: count.rs  date.rs  mod.rs  timestampz.rs
