[package]
name = "backend-parking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
async-trait = "0.1.80"
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
chrono = { version = "0.4.38", features = ["serde"] }
derive_more = { version = "0.99.17", features = ["from", "display"] }
futures = "0.3.30"
http-body-util = "0.1.0"
jsonwebtoken = "9.3.0"
once_cell = "1.19.0"
rand = "0.8.5"
reqwest = "0.12.4"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
serde_with = "3.8.1"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio-rustls",
    "any",
    "postgres",
    "uuid",
    "time",
    "chrono",
] }
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["map-request-body", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
